crates/analyzer/tests/snapshots/errors__invert_non_numeric.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: cannot apply unary operator `~` to type `bool`
  ┌─ [snippet]:3:4
  │
3 │   ~true
  │    ^^^^ this has type `bool`; expected a numeric type


